--- a/miniprogram/pages/record/record.wxml
+++ b/miniprogram/pages/record/record.wxml
@@ -1,35 +1,22 @@
 <!--pages/record/record.wxml-->
-<block wx:for="{{meterloaction}}" wx:key="">
-  <!-- <view class='content'>
-    <view class='label'>
-      <text>Meter No: </text>
-      <text>{{item.MeterNo}}</text>
-    </view>
-    <view class='label'>
-      <text>Latitude: </text>
-      <text>{{item.latitude}}</text>
-    </view>
-    <view class='label'>
-      <text>longitude: </text>
-      <text>{{item.longitude}}</text>
-    </view>
-    <view class='label'>
-      <text>Address: </text>
-      <text>{{item.locationAddress}}</text>
-    </view>
-    <button data-id='{{item._id}}' bindtap='onDel'>Delete</button>
-    <button data-id='{{item._id}}' bindtap='onUpdate'>Edit</button>
-  </view> -->
 
-  <view class="i-swipeout-demo">
-    <i-swipeout i-class="i-swipeout-demo-item" actions="{{actions}}">
-      <view slot="content">
-        <view class="i-swipeout-des">
-          <view class="i-swipeout-des-h2">Meter: {{item.MeterNo}}</view>
-          <view class="i-swipeout-des-detail">{{item.locationAddress}}</view>
-        </view>
-      </view>
-    </i-swipeout>
 
+<view class="search-cell">
+ 
+    <input class="input-search" placeholder="\🔍Search" placeholder-class="center" value="{{inputVal}}" />
+ 
+</view>
+ 
+
+<view class="container_record">
+
+  <view class="idcard-item" wx:for="{{meterloaction}}" wx:key="*this" ontap="getDetail" data-meterid="{{item._id}}">
+    <view class="idcard-image">
+      <image src="{{item.image}}"></image>
+    </view>
+    <view class="idcard-detail">
+      <view class="title">Meter: {{item.MeterNo}}</view>
+      <view class="content">Address： {{item.locationAddress}}</view>
+    </view>
   </view>
-</block>
+</view>
