--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -81,6 +81,16 @@ input {
   width: 100%;
   padding: 50rpx 0 150rpx 0;
 }
+
+/* yhb */
+.page-loaction-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  width: 100%;
+  padding: 20rpx 0 20rpx 0;
+}
 .page-body-title {
   margin-bottom: 100rpx;
   font-size: 32rpx;
@@ -94,6 +104,13 @@ input {
   font-size: 24rpx;
   color: #000;
   margin-bottom: 100rpx;
+}
+
+/* yhb */
+.page-body-text-small {
+  font-size: 24rpx;
+  color: #000;
+  margin-bottom: 20rpx;
 }
 
 .page-foot{
