--- a/miniprogram/pages/record/record.wxss
+++ b/miniprogram/pages/record/record.wxss
@@ -1,56 +1,62 @@
 /* pages/record/record.wxss */
-.i-swipeout-demo-item{
-    border-bottom:#333 solid 1px;
+
+.idcard-item {
+  display: flex;
+  width: 100%;
+  padding: 10px;
+  border-bottom: 1px solid #eee;
 }
-.i-cell-padding{
-    padding:5px 0px!important;
-    font-size:14px;
+
+.idcard-image > image {
+  width: 150px;
+  height: 100px;
+  border: 1px solid #eee;
 }
-.i-swipeout-demo-title{
-    height:30px;
-    padding:0 15px;
-    line-height:30px;
-    margin-top:20px;
-    margin-bottom:5px;
+
+.idcard-image {
+  padding-left: 10px;
 }
-.i-swipeout-demo-des{
-    padding:0 15px;
-    margin-bottom:10px;
-    font-size:12px;
-    color:#ff9900;
+
+.idcard-detail {
+  font-size: 14px;
+  margin-left: 10px;
 }
-/*左中右结构*/
-.i-swipeout-image{
-    float:left;
-    width:40px;
-    height:40px;
-    line-height:40px;
-    text-align:center;
-    border-radius:40px;
-    background: #2d8cf0;
-}
-.i-swipeout-des{
-    margin-left:5px;
-}
-.i-swipeout-des-detail{
-    font-size:12px;
-    word-break:break-all;
-    color:#80848f;
+
+.container_record {
+  /* height: 100%; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  width: 100%
 }
 
 
-/*自定义按钮*/
-.i-swipeout-demo-button-group{
-    height:100%;
-    width:100%;
+
+.input-search {
+  border: lightgrey;
+  border-style: solid;
+  border-width: 1px;
+  font-size: 14px;
+  /* border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px; */
+  border-radius: 5px;
+  height: 31px;
+  padding-left: 10px;
+  
 }
-.i-swipeout-demo-button{
-    width:70px;
-    float:left;
-    display: flex;
-    height:100%;
-    justify-content: center;
-    background:#2d8cf0;
-    color:#fff;
-    align-items:center;
+
+.search-cell {
+  margin-top: 10px;
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  align-items: center;  
+}
+
+.center{
+    text-align: center;
 }
