--- a/miniprogram/pages/scanCode/scanCode.wxss
+++ b/miniprogram/pages/scanCode/scanCode.wxss
@@ -26,3 +26,19 @@ form{
   color: #225aa5;
   background-color: transparent
 }
+
+.idcard {
+  width: 200px;
+  height: 126px;
+  margin-top: 10px;
+  
+}
+
+.container_Image {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+} 
